# vibetracks

./: .gitignore  CLAUDE.md  README.md  VISION.md  pyproject.toml
.claude/skills/gamepack/: SKILL.md
.claude/skills/soundtrack/: SKILL.md
.claude/skills/spritesheet/: SKILL.md
art/emberhold/sprites/: cleric-attack.json  dark-knight.json  knight-attack.json  knight.json  mage-attack.json  mage.json  ranger-attack.json  ranger.json  skeleton.json  slime.json
art/tiny-knight/: artbook.json
art/tiny-knight/sprites/: knight-attack.json  knight-dusk.json  knight.json  slime.json
docs/: composition.md  godot.md  pixelcraft.md
groups/amber-court/: soundtrack.json
groups/amber-court/tracks/: throne-room.json
groups/music/amber-court/tracks/: garden.json
groups/music/emberhold/: soundtrack.json
groups/music/emberhold/tracks/: boss.json  exploration.json  main-theme.json  siege.json  victory.json
groups/music/neon-frontier/: soundtrack.json
groups/neon-frontier/tracks/: battle.json  boss.json  exploration.json  title-theme.json
groups/sprites/dusk-glade/: artbook.json
groups/sprites/dusk-glade/sprites/: boulder.json  fern.json  great-oak.json  meadow.json  toadstool.json
groups/sprites/emberhold/: artbook.json
groups/sprites/emberhold/sprites/: banner.json  bat.json  brazier.json  cleric-attack.json  cleric-battle.json  cleric.json  (+25 more)
groups/sprites/mossy-hollow/: artbook.json
groups/verdant-vale/: soundtrack.json
groups/verdant-vale/tracks/: exploration.json  main-theme.json  reflection.json
labkit/: __init__.py  export.py  groups.py  registry.py  specbase.py  world.py
labkit/exporters/: __init__.py  godot.py
labs/: __init__.py  __main__.py
pixeltracks/: CLAUDE.md  __init__.py  __main__.py  compositor.py  describe.py  inspect.py  palette.py  pngio.py  raster.py  shapes.py  spec.py
scripts/: setup-soundfont.sh
tests/: test_engines.py  test_export.py  test_pixeltracks.py  test_smoke.py  test_soundfont.py  test_world.py
tracks/: battle.json  boss.json  exploration.json  title-theme.json  victory.json
vibetracks/: CLAUDE.md  __init__.py  __main__.py  instruments.py  sequencer.py  soundfont.py  spec.py  synth.py  theory.py  wavio.py
worlds/emberhold/: world.json
(+7 files in other folders)
