[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "vibetracks"
version = "0.1.0"
description = "A game-soundtrack lab: model songs as JSON, compile them to WAV with pure-Python synthesis."
readme = "README.md"
requires-python = ">=3.9"
dependencies = ["numpy>=1.24", "scipy>=1.10"]

[project.optional-dependencies]
# Sample-based realism (the "soundfont" engine). Also needs the FluidSynth
# system library + a General MIDI .sf2 — see CLAUDE.md / scripts/setup-soundfont.sh.
soundfont = ["pyfluidsynth>=1.3.0"]

[project.scripts]
vibetracks = "vibetracks.__main__:main"

[tool.setuptools]
packages = ["vibetracks"]
