[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "vibetracks"
version = "0.2.0"
description = "A multi-Lab game-artifact workshop: model assets as JSON, compile them deterministically. VibeTracks (music) and PixelTracks (sprites)."
readme = "README.md"
requires-python = ">=3.9"
dependencies = ["numpy>=1.24", "scipy>=1.10"]

[project.optional-dependencies]
# Sample-based realism (the "soundfont" engine). Also needs the FluidSynth
# system library + a General MIDI .sf2 — see CLAUDE.md / scripts/setup-soundfont.sh.
soundfont = ["pyfluidsynth>=1.3.0"]

[project.scripts]
labs = "labs.__main__:main"               # dispatcher across every Lab
vibetracks = "vibetracks.__main__:main"   # the music Lab
pixeltracks = "pixeltracks.__main__:main" # the sprite Lab

[tool.setuptools]
# labkit is the shared core; labs is the dispatcher; the rest are the Labs.
packages = ["labkit", "labs", "vibetracks", "pixeltracks"]
